Pull up following revision(s) (requested by bouyer in ticket #145): 	sys/netinet/ip_carp.c: revision 1.48 Do not sleep in callout context, this will hang the clock soft interrupt. Should fix PR kern/46217.